# NEURAL-PREDICTION-MARKET

./: .gitattributes  .gitignore  README.md  data_utils.py  download_data.py  evaluate.py  pyproject.toml  requirements.txt  train.py  visualize.py
configs/: cifar100.yaml  default.yaml  pretrained.yaml
experiments/: run_phase1.py  run_phase2.py  run_phase3.py  run_pretrained.py
models/: __init__.py  baselines.py  posthoc_ood.py  pretrained_npm.py  uq_heads.py  vit_npm.py
npm_core/: __init__.py  agents.py  capital.py  market.py  uncertainty.py
scripts/: run_all.sh  run_phase1.sh  run_phase2.sh  run_phase3.sh  run_pretrained.sh  setup.sh  train_cifar100.sh
