[project]
name = "neural-prediction-market"
version = "0.1.0"
description = "Endogenous hypothesis selection via betting-based credit assignment"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "numpy>=1.24,<2.4",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "pyyaml>=6.0",
    "tensorboard>=2.14",
    "scikit-learn>=1.3",
]

[project.scripts]
npm-download = "download_data:download_all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["npm_core", "models", "experiments"]
